--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,12 +8,18 @@ repository = "https://github.com/dtolnay/itoa"
 documentation = "https://github.com/dtolnay/itoa"
 categories = ["value-formatting"]
 readme = "README.md"
-exclude = ["performance.png"]
+exclude = ["performance.png", "/sgx/*"]
 
 [features]
-default = ["std"]
+default = ["std", "mesalock_sgx"]
 i128 = []
 std = []
 
+# Supports rust-sgx-sdk using cargo and xargo
+mesalock_sgx = ["sgx_tstd"]
+
 [badges]
 travis-ci = { repository = "dtolnay/itoa" }
+
+[target.'cfg(not(target_env = "sgx"))'.dependencies]
+sgx_tstd = { rev = "v1.1.0", git = "https://github.com/apache/teaclave-sgx-sdk.git", optional = true }
