--- a/sgx/itoa-sgx-test/app/Cargo.toml
+++ b/sgx/itoa-sgx-test/app/Cargo.toml
@@ -5,6 +5,6 @@ authors = ["Baidu"]
 build = "build.rs"
 
 [dependencies]
-sgx_types = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
-sgx_urts = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
+sgx_types = { rev = "v1.1.4-upgrade", git = "https://github.com/yunuseozer/incubator-teaclave-sgx-sdk.git" }
+sgx_urts = { rev = "v1.1.4-upgrade", git = "https://github.com/yunuseozer/incubator-teaclave-sgx-sdk.git" }
 dirs = "1.0.2"
